--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
   <div class="header">
     <nav>
       <ul class="nav nav-pills pull-right">
-        <li role="presentation" class="active"><a href="#">Home</a></li>
-        <li role="presentation"><a href="#">About</a></li>
-        <li role="presentation"><a href="#">Contact</a></li>
+        <li role="presentation" class="active"><a href="/">Home</a></li>
+<!--         <li role="presentation"><a href="#">About</a></li>
+        <li role="presentation"><a href="#">Contact</a></li> -->
       </ul>
     </nav>
     <h3 class="text-muted">Planning PermiSMSion</h3>
