--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,1 +1,31 @@
 <h1>Hello <%= @user.email %></h1>
+
+<h2>
+  You have <%= pluralize(@user.subscriptions.count, 'subscription') %>
+</h2>
+
+<p><%= link_to 'Add a subscription', new_account_subscription_path %></p>
+
+<% if @user.subscriptions.any? %>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Address</th>
+        <th>Radius</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @user.subscriptions.each do |subscription| %>
+        <tr>
+          <td><%= subscription.address %></td>
+          <td><%= subscription.radius %>m</td>
+          <td>
+            <%= form_for ['account', subscription], :method => 'delete' do |f| %>
+              <button type="submit" class="btn btn-danger">Delete</button>
+            <% end -%>
+        </tr>
+      <% end -%>
+    </tbody>
+  </table>
+<% end -%>
