--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,7 +24,9 @@
   <div class="field">
     <%= f.label :phone_number %>
     <em>(optional if you want SMS updates)</em><br />
-    <%= f.text_field :phone_number %>
+
+    <%= f.text_field :phone_number %><br />
+    <em>(please use the format +447XXXXXXXXX)</em>
   </div>
 
   <div class="actions">
